update form and redirection of pages
now clicking on the logo goes back to the index

--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,12 @@ body{
     display: block;
     margin-top: 25%;
 }
+
+.alert{
+    text-align: center;
+    
+}
+
+.bemvindo{
+    text-align: center;
+}
